# PluginQuacker

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build-tests-simple.sh  build-tests.bat  build-tests.sh  clean-repo.sh  cleanup-tests.sh  run_tests.ps1  run_tests.sh  smoke-test-simple.sh  smoke-test.sh
.github/workflows/: build-plugin.yml  test-plugin.yml
QuackerVST/: QuackerVST.jucer
QuackerVST/Builds/MacOSX/: Info-AU.plist  Info-Standalone_Plugin.plist  Info-VST3.plist  Info-VST3_Manifest_Helper.plist
QuackerVST/Builds/MacOSX/QuackerVST.xcodeproj/: project.pbxproj
QuackerVST/Builds/MacOSX/QuackerVST.xcodeproj/xcshareddata/xcschemes/: QuackerVST - All.xcscheme
QuackerVST/Builds/MacOSX/TremoloViolaVST.xcodeproj/: project.pbxproj
QuackerVST/Builds/MacOSX/TremoloViolaVST.xcodeproj/xcshareddata/xcschemes/: TremoloViolaVST - All.xcscheme  TremoloViolaVST - Standalone Plugin.xcscheme
QuackerVST/Builds/VisualStudio2022/: resources.rc
QuackerVST/JuceLibraryCode/: BinaryData.cpp  BinaryData.h  JuceHeader.h  JucePluginDefines.h
QuackerVST/Source/: ArrowNavigationComboBox.h  CustomComboBox.h  CustomDialLookAndFeel.cpp  CustomDialLookAndFeel.h  CustomMenuLookAndFeel.h  CustomToggle.h  HierarchicalPresetMenu.cpp  HierarchicalPresetMenu.h  InterpolationTypes.h  LFOVisualizer.h  ModulationLFO.h  PerlinNoise.cpp  PerlinNoise.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetComponent.cpp  PresetComponent.h  PresetManager.cpp  PresetManager.h  Presets.cpp  Presets.h  TransparentButtonLookAndFeel.h  TremoloLFO.cpp  TremoloLFO.h  WaveshapeLFO.cpp  WaveshapeLFO.h
QuackerVST/Source/Fonts/: FontManager.cpp  FontManager.h
Tests/: .gitignore  JuceHeader.h  MinimalTest.cpp  PluginProcessorTests.cpp  PluginProcessorTests_Fixed.cpp  PresetManagerTests.cpp  QuackerVSTTests.h  SimpleTestRunner.cpp  SimplifiedTests.h  TestProcessorWrapper.h  TestRunner.cpp  TremoloLFOTests.cpp  TremoloViola_Tests.jucer  UIStubs.cpp
Tests/JuceLibraryCode/: JuceHeader.h
Tests/Source/: Main.cpp  PluginTests.cpp  PluginTests.h  PresetManagerTests.cpp  PresetManagerTests.h  SmokeTests.cpp  SmokeTests.h  TremoloLFOTests.cpp  TremoloLFOTests.h
build-tests/: CMakeCache.txt  Makefile  cmake_install.cmake
build-tests/QuackerVSTTests_artefacts/JuceLibraryCode/: Info.txt
build-tests/QuackerVSTTests_artefacts/JuceLibraryCode/Debug/: Defs.txt
build-tests/juce_build/: JUCEExportConfig.cmake  Makefile  cmake_install.cmake
build-tests/juce_build/modules/: Makefile  cmake_install.cmake
build-tests/juce_build/tools/: CMakeCache.txt  JUCEExportConfig.cmake  JUCEToolsExport.cmake  Makefile  cmake_install.cmake
build-tests/juce_build/tools/modules/: Makefile  cmake_install.cmake
